# databank-ci

./: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  README.md  README_en.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
dashboard/: APP.py
dashboard/components/: charts.py  mcp_client.py  ui.py
dashboard/i18n/: en.json  fr.json
dashboard/pages/: 00_Accueil.py  01_Portefeuille_Clients.py  02_Comportement_et_Engagement.py  03_Retention_et_Risque.py  04_Vue_Client_360.py  05_Opportunites_Commerciales.py  06_Intelligence_Artificielle.py  (+2 more)
dbt_project/: dbt_project.yml  profiles.yml
docs/: architecture.md  architecture_en.md  business_understanding.md  business_understanding_en.md  data_dictionary.md  data_dictionary_en.md  decisions.md  decisions_en.md  erd_diagram.md  erd_diagram_en.md  ml_problem_definition.md  ml_problem_definition_en.md  model_comparison.md  model_comparison_en.md  submission_writeup.html  submission_writeup.md  submission_writeup_en.md  synthetic_data_rationale.md  synthetic_data_rationale_en.md
mcp/: databank_mcp_server.py
mcp_server/: README_MCP.md  README_MCP_en.md  databank_mcp_server.py
ml/: comparison.py  data.py  model.py  registry.py  rules.py
notebooks/: EDA_databank_ci.ipynb
pipelines/: run_ml_pipeline.py  run_pipeline.py
scripts/: deploy.sh
src/: data_enrichment.py  ingest.py  lineage.py  logger.py  storage_sync.py  synthetic_data_generator.py  validation.py
tests/: conftest.py  test_data_enrichment.py  test_mcp_tools.py  test_ml_pipeline.py  test_synthetic_data_generator.py
(+27 files in other folders)
